# starconf

./: .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  autoconf.bzl  build.rs  config.h  config.ref.h  meson.build  meson_options.txt  out.sexpr
docs/: lib.md
docs/lib/: autoconf.md  autoconfig.md  bool.md  compiler.md  configuration_data.md  dict.md  float.md  host_machine.md  int.md  json.md  list.md  namespace.md  range.md  set.md  str.md  struct.md  tuple.md  type.md  typing.md
example/: BUILD.bazel  arguments.txt  main.c
examples/libarchive/: BUILD.bazel  MODULE.bazel  config.star  libarchive.BUILD.bazel  main.c  stubs.c
examples/simple/: BUILD.bazel  MODULE.bazel  autoconf.star  config.h.in  main.c
patches/: starlark+0.13.0.patch
src/: docgen.rs  main.rs  meson.rs  toplevels.rs
src/values/: autoconfig.rs  compiler.rs  configure_file.rs  dependency.rs  host_machine.rs  mod.rs  option.rs  project.rs  store.rs  version.rs
src/values/configuration_data/: globals.rs  methods.rs  mod.rs  refs.rs  value.rs
