module(
    name = "libarchive_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "starconf", version = "0.0.0")
bazel_dep(name = "platforms", version = "0.0.10")

# Optional compression dependencies from BCR
bazel_dep(name = "zlib", version = "1.3.1.bcr.4")

local_path_override(
    module_name = "starconf",
    path = "../..",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libarchive",
    build_file = "//:libarchive.BUILD.bazel",
    sha256 = "ed8b5732e4cd6e30fae909fb945cad8ff9cb7be5c6cdaa3944ec96e4a200c04c",
    strip_prefix = "libarchive-3.7.9",
    urls = ["https://github.com/libarchive/libarchive/releases/download/v3.7.9/libarchive-3.7.9.tar.xz"],
)
