load("@rules_cc//cc:defs.bzl", "cc_library")
load("@starconf//:autoconf.bzl", "autoconf")

autoconf(
    name = "config",
    config_in = "config.h.in",
    config_out = "config.h",
    starlark_config = "autoconf.star"
)

cc_library(
    name = "lib",
    srcs = [
        "main.c"
    ],
    deps = [":config"]
)
